blueprints/echo-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
