blueprints/echo-server/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server
spec:
  hostnames:
    - echo.developer-friendly.blog
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: global
      namespace: cert-manager
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: oathkeeper-proxy
          port: 80
      filters:
        - requestHeaderModifier:
            set:
              - name: x-forwarded-proto
                value: https
              - name: x-forwarded-host
                value: echo.developer-friendly.blog
          type: RequestHeaderModifier
        - responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
              - name: set-cookie
                value: SameSite=None; Secure
          type: ResponseHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
